attempted to fix safari rendering spacing

--- a/master_style.css
+++ b/master_style.css
@@ -1014,6 +1014,7 @@ a>.schedule:hover {
 		margin:auto;
 		text-align:center;
 		margin-bottom:20px;
+		margin-top:0;
 		border-style:solid;
 		border-color:rgba(13, 32, 52, 0.5);
 		border-width:5px;
